--- a/style.css
+++ b/style.css
@@ -141,7 +141,7 @@ h3 {
 
 .dolna-sekcja {
     position: absolute; /* Lub relative, zależy od układu */
-    bottom: 0;
+    bottom: 50px !important;
     left: 0;
     width: 100%;        /* Szerokość ekranu */
     height: 0;
@@ -155,7 +155,7 @@ h3 {
 
 .lewy-dolny {
     position: absolute;
-    bottom: 70px;
+    bottom: 40px;
     left: 0px;
     height: 40vh !important;
     min-height: 250px;
@@ -169,7 +169,7 @@ h3 {
 
 .prawy-dolny {
     position: absolute;
-    bottom: 60px;
+    bottom: 30px;
     right: 5px;
     height: 40vh !important;
     min-height: 250px;
