--- a/style.css
+++ b/style.css
@@ -106,7 +106,7 @@ body {
     font-size: 1.2rem;
     position: absolute;
     top: 40% !important;
-    right: 10% !important;
+    left: 0 !important;
     color: white;
     flex-shrink: 0;
     display: flex;
@@ -141,7 +141,7 @@ h3 {
 
 .dolna-sekcja {
     position: absolute; /* Lub relative, zależy od układu */
-    bottom: 50px !important;
+    bottom: 25px !important;
     left: 0;
     width: 100%;        /* Szerokość ekranu */
     height: 0;
@@ -154,9 +154,9 @@ h3 {
 }
 
 .lewy-dolny {
-    position: absolute;
-    bottom: 40px;
-    left: 0px;
+    position: fixed;
+    bottom: 0 !important;
+    left: 0 !important;
     height: 40vh !important;
     min-height: 250px;
     width: auto !important;
@@ -165,12 +165,13 @@ h3 {
     object-fit: contain;
     flex-shrink: 0;
     display: block !important;
+    transform: none !important;
 }
 
 .prawy-dolny {
-    position: absolute;
-    bottom: 30px;
-    right: 5px;
+    position: fixed;
+    bottom: 0 !important;
+    right: 0 !important;
     height: 40vh !important;
     min-height: 250px;
     width: auto !important;
@@ -179,6 +180,7 @@ h3 {
     object-fit: contain;
     flex-shrink: 0;
     display: block !important;
+    transform: none !important;
 }
 
 /*.lewy-dolny {
