--- a/style.css
+++ b/style.css
@@ -69,6 +69,7 @@ body {
     background: linear-gradient(135deg, #27c304 0%, #0b7601 100%);
     z-index: 20;
     overflow-y: auto;
+    overflow-x: hidden;
     -webkit-overflow-scrolling: touch;
     /*padding: 30px;*/
     padding: 30px 20px 100px 20px;
