--- a/style.css
+++ b/style.css
@@ -41,6 +41,7 @@ body {
     transition: transform 1s cubic-bezier(0.77, 0, 0.175, 1);
     overflow: hidden;
     overflow-y: hidden;
+    overflow-x: hidden;
     flex-shrink: 0;
 }
 
