--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 
 html {
     font-size: 16px; /* bazowy rozmiar dla rem */
-    background: linear-gradient(135deg, #27c304 0%, #0b7601 100%);
+    background: linear-gradient(/*135deg*/ to bottom, #27c304 0%, #0b7601 100%);
     height: 100%;
 }
 
@@ -23,7 +23,9 @@ body {
     width: 100%;
     height: 100vh;
     height: 100dvh;
-    background: linear-gradient(135deg, #27c304 0%, #0b7601 100%);
+    /*background: linear-gradient(135deg, #27c304 0%, #0b7601 100%);*/
+    background-color: transparent !important; 
+    background-image: none !important;
 }
 
 .sekcja {
