--- a/style.css
+++ b/style.css
@@ -8,6 +8,12 @@ html {
     font-size: 16px; /* bazowy rozmiar dla rem */
     background: linear-gradient(/*135deg*/ to bottom, #27c304 0%, #0b7601 100%);
     height: 100%;
+    overscroll-behavior: none;
+    background-color: #0b7601;
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-size: cover;
+    overflow: hidden;
 }
 
 body {
