--- a/style.css
+++ b/style.css
@@ -10,10 +10,10 @@ html {
     height: 100%;
     overscroll-behavior-y: auto;
     background-color: #0b7601;
-    background-attachment: fixed;
+    background-attachment: fixed !important;
     background-repeat: no-repeat;
-    background-size: cover;
-    overflow-y: auto;
+    background-size: cover !important;
+    overflow-y: auto !important;
 }
 
 body {
@@ -23,7 +23,9 @@ body {
     overflow-x: hidden;
     position: relative;
     max-width: 100vw;
-    min-height: 100vh;
+    min-height: calc(100vh + 1px) !important;
+    margin: 0 !important;
+    padding: 0 !important;
     display: flex;
     flex-direction: column;
     width: 100%;
@@ -48,7 +50,7 @@ body {
     position: relative;
     transition: transform 1s cubic-bezier(0.77, 0, 0.175, 1);
     overflow: hidden;
-    overflow-y: hidden;
+    overflow-y: visible;
     overflow-x: hidden;
     flex-shrink: 0;
 }
